add update tests

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -3,16 +3,13 @@
     "ExampleDbContext": "Server=(localdb)\\mssqllocaldb;Database=CcgApiTemplate;Trusted_Connection=True;"
   },
   "IdentityProvider": {
-    //"Authority": "https://inter-w01-dev.ent.dfo-mpo.ca/applications/ccga-gccc",
-    "Authority": "https://inter-w01.dfo-mpo.gc.ca/applications/ccga-gccc",
-    "ApiName": "voc-api-local",
+    "Authority": "https://ccg-account.azurewebsites.net",
+    "ApiName": "template-api-local",
 
     "Client": "http://localhost:8081",
-    "ClientId": "voc-web-local",
-    "ClientAudience": "voc-api-local",
-    "ClientScope": "voc-api-local_full",
-
-    "GisAudience": "vocapi-gis"
+    "ClientId": "template-web-local",
+    "ClientAudience": "template-api-local",
+    "ClientScope": "template-api-local_full"
   },
   "Application": {
     "NameEn": "Vessels of Concern",
