--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "CctDbContext": "Server=(localdb)\\mssqllocaldb;Database=CCT;Trusted_Connection=True;"
+    //"CctDbContext": "Data source=ccgdata.db"
   },
   "Application": {
     "NameEn": "CCG CCT",
