--- a/Service/web.config
+++ b/Service/web.config
@@ -1,7 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
-  <!-- To customize the asp.net core module uncomment and edit the following section. 
+	<!-- To customize the asp.net core module uncomment and edit the following section. 
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
+
+	<configSections>
+		<!-- Assembly Microsoft.EntityFrameworkCore, Version=3.1.8.0, Culture=neutral, PublicKeyToken=adb9793829ddae60-->
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, Microsoft.EntityFrameworkCore, Version=3.1.8.0, Culture=neutral, PublicKeyToken=adb9793829ddae60" requirePermission="false" />
+	</configSections>
+	<connectionStrings>
+		<add name="FluentProperty_Connection" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\mssqllocaldb;Database=CCT;Trusted_Connection=True;Integrated Security=True;" />
+	</connectionStrings>
+	<entityFramework>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		</providers>
+	</entityFramework>
 
 </configuration>
