--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -36,6 +36,8 @@
     <Compile Remove="Migrations\20201030114817_initiate6.Designer.cs" />
     <Compile Remove="Migrations\20201030115537_initiate7.cs" />
     <Compile Remove="Migrations\20201030115537_initiate7.Designer.cs" />
+    <Compile Remove="Migrations\20201030161554_initiatecreate11.cs" />
+    <Compile Remove="Migrations\20201030161554_initiatecreate11.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
