--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201102112300_newdbandseed.cs" />
+    <Compile Remove="Migrations\20201102112300_newdbandseed.Designer.cs" />
+    <Compile Remove="Migrations\CctDbContextModelSnapshot.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
