Get queries created - group, level, position, Jobp.

--- a/Business.Commands/Business.Commands.csproj
+++ b/Business.Commands/Business.Commands.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\DataModel\DataModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="JobGroups\" />
+  </ItemGroup>
+
 </Project>
