--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -38,6 +38,10 @@
     <Compile Remove="Migrations\20201030115537_initiate7.Designer.cs" />
     <Compile Remove="Migrations\20201030161554_initiatecreate11.cs" />
     <Compile Remove="Migrations\20201030161554_initiatecreate11.Designer.cs" />
+    <Compile Remove="Migrations\20201102225553_initmigration13.cs" />
+    <Compile Remove="Migrations\20201102225553_initmigration13.Designer.cs" />
+    <Compile Remove="Migrations\20201103005915_Initialmigration14.cs" />
+    <Compile Remove="Migrations\20201103005915_Initialmigration14.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
