--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -4,7 +4,8 @@
   },
   "Application": {
     "NameEn": "CCG CCT",
-    "NameFr":  "CCG CCT"
+    "NameFr": "CCG CCT",
+    "MigrationsOnStartup":  false
   },
   "Serilog": {
     "MinimumLevel": "Warning"
