added dot net core version to pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '3.1.x'
 - task: DotNetCoreCLI@2
   displayName: 'run unit tests'
   inputs:
