--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <UserSecretsId>f68aef59-651d-4638-b9ca-92cf3a97fcdb</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
