turning on migrations on startup

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -5,7 +5,7 @@
   "Application": {
     "NameEn": "CCG CCT",
     "NameFr": "CCG CCT",
-    "MigrationsOnStartup":  false
+    "MigrationsOnStartup":  true
   },
   "Serilog": {
     "MinimumLevel": "Warning"
