--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -42,6 +42,8 @@
     <Compile Remove="Migrations\20201102225553_initmigration13.Designer.cs" />
     <Compile Remove="Migrations\20201103005915_Initialmigration14.cs" />
     <Compile Remove="Migrations\20201103005915_Initialmigration14.Designer.cs" />
+    <Compile Remove="Migrations\20201111022419_dataseed4.cs" />
+    <Compile Remove="Migrations\20201111022419_dataseed4.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
