--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -44,6 +44,14 @@
     <Compile Remove="Migrations\20201103005915_Initialmigration14.Designer.cs" />
     <Compile Remove="Migrations\20201111022419_dataseed4.cs" />
     <Compile Remove="Migrations\20201111022419_dataseed4.Designer.cs" />
+    <Compile Remove="Migrations\20201115203413_migrationrecreate.cs" />
+    <Compile Remove="Migrations\20201115203413_migrationrecreate.Designer.cs" />
+    <Compile Remove="Migrations\20201115203808_migrationrecreate.cs" />
+    <Compile Remove="Migrations\20201115203808_migrationrecreate.Designer.cs" />
+    <Compile Remove="Migrations\20201115204042_recreatemigration1.cs" />
+    <Compile Remove="Migrations\20201115204042_recreatemigration1.Designer.cs" />
+    <Compile Remove="Migrations\20201115205857_recreatemigration3.cs" />
+    <Compile Remove="Migrations\20201115205857_recreatemigration3.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
