--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -52,6 +52,8 @@
     <Compile Remove="Migrations\20201115204042_recreatemigration1.Designer.cs" />
     <Compile Remove="Migrations\20201115205857_recreatemigration3.cs" />
     <Compile Remove="Migrations\20201115205857_recreatemigration3.Designer.cs" />
+    <Compile Remove="Migrations\20201123020006_recreatemodel.cs" />
+    <Compile Remove="Migrations\20201123020006_recreatemodel.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
