--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CctDbContext": "Server=//;Database=CCT;Trusted_Connection=True;"
+    "CctDbContext": "Server=localhost;port=3306;Database=CCTData;User=root;Password=Gdzanre!2"
   },
   "Application": {
     "NameEn": "CCG CCT",
