--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CctDbContext": "Server=localhost;port=3306;Database=CCT;User=root;Password=root"
+    "CctDbContext": "Server=(localdb)\\mssqllocaldb;Database=CCT;Trusted_Connection=True;"
   },
   "Application": {
     "NameEn": "CCG CCT",
