--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CctDbContext": "Server=LAPTOP-81CBV0VK\\SQLEXPRESS;Database=CCTData;Trusted_Connection=True;"
+    "CctDbContext": "Server=(localdb)\\mssqllocaldb;Database=CCT;Trusted_Connection=True;"
   },
   "Application": {
     "NameEn": "CCG CCT",
