--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\Business.Commands\Business.Commands.csproj" />
     <ProjectReference Include="..\Business.Queries\Business.Queries.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Data.Classes\Data.Classes.csproj" />
     <ProjectReference Include="..\DataModel\DataModel.csproj" />
   </ItemGroup>
 
