--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -31,9 +31,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Business.Commands\Business.Commands.csproj" />
+    <ProjectReference Include="..\Business.Dtos\Business.Dtos.csproj" />
     <ProjectReference Include="..\Business.Queries\Business.Queries.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\Data.Classes\Data.Classes.csproj" />
     <ProjectReference Include="..\DataModel\DataModel.csproj" />
   </ItemGroup>
 
