Update to Seed Data and Student section.

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -142,7 +142,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Mockups\Students\" />
     <Folder Include="Properties\" />
+    <Folder Include="wwwroot\img\Student\" />
   </ItemGroup>
 
   <ItemGroup>
