--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Competencies\Behavioural\" />
+    <Folder Include="Pages\Competencies\Technical\" />
+  </ItemGroup>
+
 </Project>
