commands added/admin configuration

--- a/Admin/appsettings.json
+++ b/Admin/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     "CctDbContext": "Server=(localdb)\\mssqllocaldb;Database=CCT;Trusted_Connection=True;"
   },
-
+  "App": {
+    "ApiEndpoint": "https://localhost:44310/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
