--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Competencies\Behavioural\**" />
+    <Compile Remove="Pages\Competencies\Technical\**" />
+    <Content Remove="Pages\Competencies\Behavioural\**" />
+    <Content Remove="Pages\Competencies\Technical\**" />
+    <EmbeddedResource Remove="Pages\Competencies\Behavioural\**" />
+    <EmbeddedResource Remove="Pages\Competencies\Technical\**" />
+    <None Remove="Pages\Competencies\Behavioural\**" />
+    <None Remove="Pages\Competencies\Technical\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Business.Commands\Business.Commands.csproj" />
     <ProjectReference Include="..\Business.Queries\Business.Queries.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
@@ -13,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="CCG.AspNetCore.Web" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.12">
@@ -22,11 +34,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration" Version="3.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Competencies\Behavioural\" />
-    <Folder Include="Pages\Competencies\Technical\" />
   </ItemGroup>
 
 </Project>
